--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "pathway-htmx",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.js"
+    "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
-    "fs-routes": "^12.1.3",
     "radix3": "^1.1.0",
     "typed-html": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.8.10",
     "tsx": "^3.14.0"
   }
 }
