--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "db:push": "drizzle-kit push:sqlite"
   },
   "dependencies": {
     "@kitajs/html": "^3.0.5",
+    "better-sqlite3": "^9.0.0",
+    "drizzle-orm": "^0.28.6",
     "radix3": "^1.1.0"
   },
   "devDependencies": {
     "@kitajs/ts-html-plugin": "^1.3.0",
+    "@types/better-sqlite3": "^7.6.6",
     "@types/node": "^20.8.10",
+    "drizzle-kit": "^0.19.13",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
