--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@kitajs/ts-html-plugin": "^1.3.0",
     "@types/better-sqlite3": "^7.6.6",
     "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "drizzle-kit": "^0.19.13",
+    "eslint": "^8.53.0",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
