--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@kitajs/html": "^3.0.5",
     "better-sqlite3": "^9.0.0",
     "drizzle-orm": "^0.28.6",
-    "radix3": "^1.1.0"
+    "radix3": "^1.1.0",
+    "serve-handler": "^6.1.5"
   },
   "devDependencies": {
     "@kitajs/ts-html-plugin": "^1.3.0",
     "@types/better-sqlite3": "^7.6.6",
     "@types/node": "^20.8.10",
+    "@types/serve-handler": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "drizzle-kit": "^0.19.13",
