--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "better-sqlite3": "^9.0.0",
     "classnames": "^2.3.2",
     "drizzle-orm": "^0.28.6",
+    "etag": "^1.8.1",
     "radix3": "^1.1.0",
     "serve-handler": "^6.1.5"
   },
   "devDependencies": {
     "@kitajs/ts-html-plugin": "^1.3.0",
     "@types/better-sqlite3": "^7.6.6",
+    "@types/etag": "^1.8.3",
     "@types/node": "^20.8.10",
     "@types/serve-handler": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
