--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "jsx": "react",
     "jsxFactory": "Html.createElement",
     "jsxFragmentFactory": "Html.Fragment",
-    "plugins": [{ "name": "@kitajs/ts-html-plugin" }]
+    "plugins": [{ "name": "@kitajs/ts-html-plugin" }],
+
+    "types": ["@kitajs/html/htmx.d.ts"]
   }
 }
