🔧 update vs code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
             "database": "${workspaceFolder:pathway-htmx}/db.sqlite"
         }
     ],
-    "sqltools.useNodeRuntime": true
+    "sqltools.useNodeRuntime": true,
+    "circleci.persistedProjectSelection": []
 }
